baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_testset_dynamic/bytecode.snap
---
source: crates/baml_tests/src/corpus.rs
---
function fixtures.testset_dynamic.$init_test_ns_fixtures_ns_testset_dynamic_main(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "root.fixtures.testset_dynamic"
    load_const "dynamic tests"
    make_closure .<lambda($init_test_ns_fixtures_ns_testset_dynamic_main, 0)>, 0
    load_const null
    call testing.TestCollector.register_test_set_at
    pop 1
    load_var registry
    load_const "root.fixtures.testset_dynamic"
    load_const "conditional tests"
    make_closure .<lambda($init_test_ns_fixtures_ns_testset_dynamic_main, 2)>, 0
    load_const null
    call testing.TestCollector.register_test_set_at
    pop 1
    load_const null
    return
}
