baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_testset_dynamic/mir.snap
---
source: crates/baml_tests/src/corpus.rs
---
=== MIR2 ===
fn user.fixtures.testset_dynamic.$init_test_ns_fixtures_ns_testset_dynamic_main(registry: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // registry // param
    let _2: void
    let _3: (testing.TestCollector) -> void throws testing.InvalidTestName
    let _4: void
    let _5: (testing.TestCollector) -> void throws testing.InvalidTestName

    bb0: {
        _3 = make_closure lambda[0]();
        _2 = call const fn testing.TestCollector.register_test_set_at(copy _1, const "root.fixtures.testset_dynamic", const "dynamic tests", copy _3, const null) -> [bb1];
    }

    bb1: {
        _5 = make_closure lambda[1]();
        _4 = call const fn testing.TestCollector.register_test_set_at(copy _1, const "root.fixtures.testset_dynamic", const "conditional tests", copy _5, const null) -> [bb2];
    }

    bb2: {
        _0 = const null;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

// lambda[0]
fn .<lambda($init_test_ns_fixtures_ns_testset_dynamic_main, 0)>(testset: testing.TestCollector) -> void {
    // Locals:
    let _0: void // _0 // return
    let _1: testing.TestCollector // testset // param
    let _2: string[] // cases
    let _3: string[]
    let _4: baml.iter.Iterator<Error = never, Item = string>
    let _5: unknown
    let _6: bool
    let _7: string
    let _8: string // case [captured]
    let _9: void
    let _10: () -> void throws never

    bb0: {
        _2 = [const "hello", const "world", const "foo"]: string[];
        _3 = copy _2;
        _4 = virtual_call iter as baml.iter.Iterable<Error = never, Item = string>(copy _3) -> [bb1];
    }

    bb1: {
        _5 = virtual_call next as baml.iter.Iterator<Error = never, Item = string>(copy _4) -> [bb2];
    }

    bb2: {
        _6 = is_type(copy _5, baml.iter.Done);
        branch copy _6 -> [bb4, bb3];
    }

    bb3: {
        _7 = copy _5;
        fresh_cell(_8);
        _8 = copy _7;
        _10 = make_closure lambda[0](copy _8);
        _9 = call const fn testing.TestCollector.register_test(copy _1, const "check case", copy _10, const null) -> [bb1];
    }

    bb4: {
        _0 = const null;
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

// lambda[0]
fn .<lambda(<lambda($init_test_ns_fixtures_ns_testset_dynamic_main, 0)>, 1)>() -> void {
    // Locals:
    let _0: void // _0 // return
    let _1: string

    bb0: {
        _1 = copy capture[0];
        _0 = call const fn assert.not_null(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[1]
fn .<lambda($init_test_ns_fixtures_ns_testset_dynamic_main, 2)>(testset: testing.TestCollector) -> void {
    // Locals:
    let _0: void // _0 // return
    let _1: testing.TestCollector // testset // param
    let _2: void
    let _3: () -> void throws never

    bb0: {
        _3 = make_closure lambda[0]();
        _2 = call const fn testing.TestCollector.register_test(copy _1, const "always runs", copy _3, const null) -> [bb1];
    }

    bb1: {
        _0 = const null;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

// lambda[0]
fn .<lambda(<lambda($init_test_ns_fixtures_ns_testset_dynamic_main, 2)>, 3)>() -> void {
    // Locals:
    let _0: void // _0 // return

    bb0: {
        _0 = call const fn assert.is_true(const true) -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[1]
fn .<lambda(<lambda($init_test_ns_fixtures_ns_testset_dynamic_main, 2)>, 4)>() -> void {
    // Locals:
    let _0: void // _0 // return

    bb0: {
        _0 = call const fn assert.is_true(const true) -> [bb1];
    }

    bb1: {
        return;
    }
}
