baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_testset_dynamic/ppir.snap
---
source: crates/baml_tests/src/corpus.rs
---
=== PPIR ===
function user.fixtures.testset_dynamic.$init_test_ns_fixtures_ns_testset_dynamic_main(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test_set_at("root.fixtures.tes...", "dynamic tests", (testset: testing.TestCollector) -> void { { let cases = ["hello", "world", "foo"]; for case in cases { testset.register_test("check case", () -> { {  } assert.not_null(case) }, null) } } null }, null); registry.register_test_set_at("root.fixtures.tes...", "conditional tests", (testset: testing.TestCollector) -> void { { { let run_slow = false; testset.register_test("always runs", () -> { {  } assert.is_true(true) }, null) } if (run_slow) { testset.register_test("only when slow", () -> { {  } assert.is_true(true) }, null) } } null }, null) } null
}

--- captures ---
lambda () in ?: captures [case]
